# forex-trading-platform

./: .gitignore  README.md  docker-compose.yml  mt5_bridge.py
.emergent/: emergent.yml
agents/: docker-compose.yml  fix_chat_persistence.py  requirements.txt  simulated_feed.py  start_agents.sh  update_chat_persistence.py
backend/: Dockerfile  pyproject.toml  requirements.txt  server.py
backend/alembic/: alembic.ini  env.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  agent_manager.py  base_agent.py  execution_agent.py  fundamental_macro_agent.py  journal_review_agent.py  macro_agent.py  market_data_agent.py  market_structure_agent.py  model_governance_agent.py  news_agent.py  news_event_agent.py  orchestrator_agent.py  performance_analytics_agent.py  portfolio_exposure_agent.py  regime_detection_agent.py  risk_manager_agent.py  sentiment_positioning_agent.py  strategy_selection_agent.py  technical_analysis_agent.py
backend/app/api/routes/: agent_api.py  agents.py  trading.py
backend/app/data/: __init__.py  data_validator.py  mt5_connector.py
backend/app/indicators/: __init__.py  momentum.py  moving_averages.py  structure.py  volatility.py
backend/app/models/: __init__.py  agent_output.py  analytics.py  base.py  governance.py  journal.py  market_data.py  system.py  trade.py
backend/app/services/: backtesting_service.py  live_trading_service.py  paper_trading_service.py  trading_manager.py
backend/app/workflows/: scheduler.py  trade_lifecycle.py
backend/tests/: conftest.py  test_foundation.py
config/: promotion_gates.yaml  (+2 more)
(+110 files in other folders)
